# mail-server

./: CMakeLists.txt  README.md
include/: client.hpp  server.hpp
report/: report.tex
src/: client.cpp  client.py  email_utils.py  server.cpp  server.py  user.py  user_utils.py  users.json  users.txt  users2.json  utils.py
src/server2/: server2.py  users.json
